Prevent featured grid layout on smallest screens

--- a/web/themes/custom/union_marketing/scss/layout/_grid.scss
+++ b/web/themes/custom/union_marketing/scss/layout/_grid.scss
@@ -1,8 +1,10 @@
 .cu-grid--featured {
-  grid-template-columns: repeat(4, 1fr);
+  @include breakpoint(sm) {
+    grid-template-columns: repeat(4, 1fr);
 
-  .cu-card--featured {
-    grid-column: 1/3;
-    grid-row: 1/3;
+    .cu-card--featured {
+      grid-column: 1/3;
+      grid-row: 1/3;
+    }
   }
 }
